	-cleaned up the UI and have the health potions properly decrementing. Need to figure out how to make them properly restore player HP

//Dustin Knowlton 7:52 PM 4/8/16
	-Blocking sequence functions as intended, except for "hitbox" issues.
	-X coordinates set as limits for hitbox seem to somehow disagree with what is displayed, including the hitbox graphic. 
	-Map Collisions

//Juri Kiin 9:31 PM 4/20/16
	- Finished combat mechanics.
	- Fixed Enemy Collision
	- Added an attack speed factor in the Enemy Creation App.
	- Added enemies into test map

// Juri Kiin 9:48 AM 5/2/16
	- Added a class system into the game for the player to choose before they start the game.
	- This affects the stats that they start out with

// Dustin Knowlton 11:55AM 5/2/2016
	-Dialogue method still progressing, currently displaying line permanently
	-BUG FOUND: armor or something of the like is causing the player to gain health from damage instead of losing it.

//James Friedenberg 8:40 PM 5/3/2015
	-Created and loaded in the Class System UI
	-Suggested fix for class not working: Add parameters to the player class for class changes instead of making a seperate class for the class system

//Juri Kiin 4:28 PM	5/4/16
	- Fixed class system.
	- Placed enemies in different places in level
	- improved attack system.

//Dustin Knowlton 4:47PM 5/4/16
	- Dialogue functioning out of/before combat, but only for one line.

//James Friedenberg 1:58 AM 5/6/2016
	- Cleaned up code and comments
	- Solution for collisions found: death by falling off map when player collides with wall
	- Found a solution to font issues: http://dylanwilson.net/bmfont-rendering-with-monogame-extended

//Juri Kiin 4:31 PM 5/6/16
	- Fixed collisions so that if you reach the boundary of the level, reset the level (but not the health!)

//James Friedenberg 4:51 5/6/2016
	- Added protag vs antag choice UI for end of the game
	- Installed MonoGame.Extended package to the project for font installation