@@ -42,6 +42,7 @@
     <Compile Include="ArrowSpawn.cs" />
     <Compile Include="Button.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="DialogueManager.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="LevelManager.cs" />
