@@ -167,3 +167,9 @@
 //James Friedenberg 4:51 5/6/2016
 	- Added protag vs antag choice UI for end of the game
 	- Installed MonoGame.Extended package to the project for font installation
+
+//Dustin Knowlton 6:05PM 5/6/2016
+	-Oh god why am I still here
+	-Dialogue text should be edited and formatted. Please read it so we can catch any errors and/or writing you don't like. 
+	-Dialogue doc is in /bin/WindowsGL/Debug/Dialogue.txt
+	-Started basis for dialogue functions, will get to that soon. Gonna be a lot of changes all over.
